--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,21 @@
   text-align: center;
 }
 
+.grid {
+  display: flex;
+  max-width: 168px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.cell {
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  border: 1px solid red;
+  color: gold;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
